# gjl_uvc

./: BLACK_SCREEN_FIX.md  CMakeLists.txt  COMPILE_FIX_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  README_FEATURES.md  UVC_LCD_DISPLAY_CHANGES.md  partitions.csv  sdkconfig  sdkconfig.defaults.esp32p4  sdkconfig.old
components/algorithms/: CMakeLists.txt  algorithms.c
components/algorithms/include/: algorithms.h
components/esp_lcd_co5300/: esp_lcd_co5300.c
components/esp_lcd_co5300/include/: esp_lcd_co5300.h
components/sensors/: CMakeLists.txt  adxl345.c  beep_key_led.c  jx90614.c
components/sensors/include/: adxl345.h  beep_key_led.h  jx90614.h
components/tasks/: CMakeLists.txt  sensors_tasks.c
components/tasks/include/: sensors_tasks.h
demo/broadcast/: CMakeLists.txt  aviplay.c  idf_component.yml  jpeg2avi.c  jpeg_encode.c  jpegavidemo.c  maindemo.c  uvc.c
demo/broadcast/include/: jpeg2avi.h
demo/i2s_recorder_p4/: sdkconfig  sdkconfig.old
demo/i2s_recorder_p4/main/: i2s_recorder_main.c
frontend_source/: package-lock.json
frontend_source/src/: App.vue  typed-router.d.ts
frontend_source/src/pages/: ota.vue
frontend_source/src/router/: index.ts
main/: CMakeLists.txt  app_avi_recorder.c  app_avi_recorder.h  app_ble.c  app_ble.h  app_https.c  app_https.h  app_lcd.c  app_lcd.h  app_main.c  app_sd_card.c  app_sd_card.h  app_uvc.c  app_uvc.h  app_video_player.c  app_video_player.h  app_wifi.c  app_wifi.h  bleprph.h  gatt_svr.c  idf_component.yml
